# control-libraries

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.ci  Dockerfile.test  README.md  VERSION  apt-packages.txt  cla-signatures.json  index.html  install.sh
.devcontainer/: devcontainer.json  generate_compile_commands
.github/workflows/: build-push.yml  build-release.yaml  build-release.yml  build-test.yml  check-contribution.yml  generate-docs.yml
demos/: CMakeLists.txt  Dockerfile  README.md  run-demo.sh
dependencies/: CMakeLists.txt  base_dependencies.cmake  dependencies.cmake  osqp.cmake
doxygen/: README.md  doxygen.conf
doxygen/docs/: README.md
licenses/: CLA.md  COPYING.HPPFCL  COPYING.OCTOMAP
protocol/: Dockerfile.protocol  README.md  build-test.sh  dev-server.sh
protocol/clproto_cpp/: CMakeLists.txt  README.md  clproto.pc.in  clprotoConfig.cmake.in
protocol/clproto_cpp/include/: clproto.h  clproto.hpp
protocol/clproto_cpp/include/clproto/: decoders.hpp  encoders.h  encoders.hpp
protocol/clproto_cpp/src/: clproto.cpp  decoders.cpp  encoders.cpp
protocol/clproto_cpp/test/tests/: test_cartesian_space_proto.cpp  test_joint_space_proto.cpp  test_json.cpp  test_messages.cpp  test_packing.cpp  test_parameter_proto.cpp  test_trajectory_proto.cpp
protocol/clproto_cpp/test/tests/include/: test_encode_decode.hpp
python/: Dockerfile.python  README.md  build-test.sh  dev-server.sh  setup.py
python/include/: clproto_bindings.hpp  controllers_bindings.hpp  dynamical_systems_bindings.hpp  parameter_container.h  parameter_container.hpp  py_controller.hpp  py_dynamical_system.hpp  robot_model_bindings.hpp  state_representation_bindings.hpp
python/test/: conftest.py  test_clproto.py
python/tests/: conftest.py
source/: CMakeLists.txt  Dockerfile.source  README.md  build-test.sh  control_librariesConfig.cmake.in  dev-server.sh
source/communication_interfaces/: CMakeLists.txt  README.md
source/controllers/: CMakeLists.txt  README.md
source/dynamical_systems/: CMakeLists.txt  README.md
source/robot_model/: CMakeLists.txt
source/state_representation/: CMakeLists.txt  README.md
versions/8.0.0/: _analog_i_o_state_8cpp_source.html  _cartesian_pose_8hpp_source.html  _cartesian_state_8hpp_source.html  _cartesian_wrench_8cpp_source.html  _circular_8hpp_source.html  _collision_geometry_exception_8hpp_source.html  _compliant_twist_8cpp_source.html  _controller_factory_8hpp_source.html  _controller_type_8hpp_source.html  _dissipative_8cpp_source.html  _distance_8hpp_source.html  _dual_quaternion_pose_8cpp_source.html  _dual_quaternion_pose_8hpp_source.html  _dual_quaternion_state_8cpp_source.html  _dual_quaternion_state_8hpp_source.html  _ellipsoid_8hpp_source.html  _empty_state_exception_8hpp_source.html  _frame_not_found_exception_8hpp_source.html  _i_dynamical_system_8cpp_source.html  _i_o_state_8cpp_source.html  _incompatible_reference_frames_exception_8hpp_source.html  _incompatible_states_exception_8hpp_source.html  _invalid_joint_state_size_exception_8hpp_source.html  _invalid_parameter_exception_8hpp_source.html  _jacobian_8cpp_source.html  _joint_positions_8hpp_source.html  _joint_state_8hpp_source.html  _math_tools_8hpp_source.html  _no_solution_to_fit_exception_8hpp_source.html  _parameter_map_8hpp_source.html  _point_attractor_8cpp_source.html  _q_p_solver_8cpp_source.html  _shape_8hpp_source.html  _spatial_state_8cpp_source.html  _state_8hpp_source.html  annotated.html  bind__cartesian__ds_8cpp_source.html  bind__computational__space_8cpp_source.html  bind__controller__type_8cpp_source.html  bind__jacobian_8cpp_source.html  (+126 more)
versions/8.1.0/: _analog_i_o_state_8cpp_source.html  _angle_8hpp_source.html  _cartesian_pose_8cpp_source.html  _cartesian_twist_8cpp_source.html  _cartesian_wrench_8cpp_source.html  _collision_geometry_exception_8hpp_source.html  _compliant_twist_8cpp_source.html  _controller_factory_8hpp_source.html  _controller_type_8hpp_source.html  _default_dynamical_system_8hpp_source.html  _digital_i_o_state_8hpp_source.html  _dissipative_8hpp_source.html  _dual_quaternion_pose_8cpp_source.html  _dynamical_system_factory_8cpp_source.html  _dynamical_system_type_8hpp_source.html  _ellipsoid_8cpp_source.html  _ellipsoid_8hpp_source.html  _empty_attractor_exception_8hpp_source.html  _empty_base_frame_exception_8hpp_source.html  _empty_state_exception_8hpp_source.html  _i_dynamical_system_8cpp_source.html  _i_o_not_found_exception_8hpp_source.html  _i_o_state_8hpp_source.html  _impedance_8hpp_source.html  _invalid_controller_exception_8hpp_source.html  _invalid_joint_state_size_exception_8hpp_source.html  _invalid_parameter_cast_exception_8hpp_source.html  _invalid_parameter_exception_8hpp_source.html  _jacobian_8cpp_source.html  _joint_accelerations_8cpp_source.html  _joint_positions_8hpp_source.html  _joint_torques_8hpp_source.html  _joint_velocities_8cpp_source.html  _math_tools_8cpp_source.html  _model_8cpp_source.html  _model_8hpp_source.html  _parameter_8hpp_source.html  _parameter_interface_8cpp_source.html  _parameter_map_8hpp_source.html  _point_attractor_8cpp_source.html  (+168 more)
versions/9.0.0/: _digital_i_o_state_8cpp_source.html  _dissipative_8hpp_source.html  _event_8hpp_source.html  _frame_not_found_exception_8hpp_source.html  _i_dynamical_system_8hpp_source.html  _impedance_8cpp_source.html  _invalid_controller_exception_8hpp_source.html  _invalid_pointer_exception_8hpp_source.html  _jacobian_8cpp_source.html  _joint_accelerations_8hpp_source.html  _joint_state_8hpp_source.html  _joint_torques_8hpp_source.html  _joint_velocities_8cpp_source.html  _math_tools_8cpp_source.html  _math_tools_8hpp_source.html  _model_8cpp_source.html  _predicate_8hpp_source.html  _ring_8cpp_source.html  _state_8hpp_source.html  _state_type_8hpp_source.html  _t_c_p_client_8hpp_source.html  _t_c_p_socket_8cpp_source.html  _u_d_p_client_8cpp_source.html  _u_d_p_server_8cpp_source.html  _velocity_impedance_8cpp_source.html  _z_m_q_socket_8cpp_source.html  _z_m_q_subscriber_8cpp_source.html  (+100 more)
(+4409 files in other folders)
